feat: search agent writing and using the agent as tool as feature

--- a/2_openai/deep_research_my_project/planner_agent.ipynb
+++ b/2_openai/deep_research_my_project/planner_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b2a4b063",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "4c93489d",
    "metadata": {},
    "outputs": [
@@ -37,13 +37,13 @@
      "output_type": "stream",
      "text": [
       "Planning searches...\n",
-      "best smartphones 2023 review\n",
+      "best smartphones of 2023\n",
       "\n",
       "\n",
-      "latest phones released 2023\n",
+      "top phone reviews 2023\n",
       "\n",
       "\n",
-      "top rated phones 2023 comparison\n",
+      "2023 phones comparison guide\n",
       "\n",
       "\n"
      ]
@@ -51,10 +51,10 @@
     {
      "data": {
       "text/plain": [
-       "WebSearchItem(reason='To find a comprehensive list of the top-rated smartphones for 2023 based on reviews and expert opinions.', query='test')"
+       "WebSearchItem(reason='To find up-to-date rankings and reviews for the latest smartphones available in 2023.', query='test')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "3188aff3",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best smartphones of 2023\n"
+      "test\n"
      ]
     }
    ],
@@ -120,17 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "c95bbe1a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "EvaluateWebSearchItem(is_accepted=False, reason=\"The WebSearchItem 'test' is too vague and does not relate to the query about the best phones of 2023.\")"
+       "EvaluateWebSearchItem(is_accepted=False, reason=\"The WebSearchItem 'test' is too vague and does not provide any relevant information about the best phones of 2023. A more specific result is needed to be useful for the query.\")"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "dbdb1ff2",
    "metadata": {},
    "outputs": [
@@ -183,10 +183,10 @@
     {
      "data": {
       "text/plain": [
-       "WebSearchItem(reason='This new search will provide a focused and comprehensive overview of the top-rated smartphones released in 2023 according to expert reviews and consumer feedback.', query='top-rated smartphones 2023 expert reviews')"
+       "WebSearchItem(reason='The new search query narrows the focus to the best smartphones of 2023, ensuring that the search results include specific rankings and reviews of current models.', query='best smartphones of 2023 reviews and rankings')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "58a3965d",
    "metadata": {},
    "outputs": [
@@ -230,16 +230,16 @@
      "text": [
       "generating a new Item\n",
       "Regeneration of the prompt for the keyword result: test\n",
-      "The query top rated smartphones 2023 reviews and comparisons is validated\n"
+      "The query best smartphones 2023 rankings reviews is validated\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "WebSearchItem(reason='To find detailed reviews and comparisons of the best smartphones released in 2023, focusing on expert opinions and user ratings, which will help the user make an informed choice.', query='top rated smartphones 2023 reviews and comparisons')"
+       "WebSearchItem(reason='This new search query directly targets the request for the best smartphones in 2023, ensuring access to current rankings, reviews, and comparisons that will inform the user about their options.', query='best smartphones 2023 rankings reviews')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,11 +263,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b675de82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt of List before:\n",
+      "test\n",
+      "\n",
+      "\n",
+      "top phone reviews 2023\n",
+      "\n",
+      "\n",
+      "2023 phones comparison guide\n",
+      "\n",
+      "\n",
+      "generating a new Item\n",
+      "Regeneration of the prompt for the keyword result: test\n",
+      "The query best smartphones 2023 rankings and reviews is validated\n",
+      "The query top phone reviews 2023 is validated\n",
+      "The query 2023 phones comparison guide is validated\n",
+      "Prompt of List after:\n",
+      "best smartphones 2023 rankings and reviews\n",
+      "\n",
+      "\n",
+      "top phone reviews 2023\n",
+      "\n",
+      "\n",
+      "2023 phones comparison guide\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "async def validate_websearch_list(query: str, webSearchItemlist: WebSearchItemList) -> WebSearchItemList:\n",
+    "    validatedWebSearchItemList = []\n",
+    "    for item in webSearchItemlist.searches:\n",
+    "        validatedItem = await validate_websearch_item(query, item)\n",
+    "        validatedWebSearchItemList.append(validatedItem)\n",
+    "    return WebSearchItemList(searches=validatedWebSearchItemList) \n",
+    "\n",
+    "\n",
+    "print(\"Prompt of List before:\")\n",
+    "for item in elements.searches:\n",
+    "    print(item.query)\n",
+    "    print(f\"\\n\") \n",
+    "\n",
+    "elements = await validate_websearch_list(query, elements)\n",
+    "\n",
+    "print(\"Prompt of List after:\")\n",
+    "for item in elements.searches:\n",
+    "    print(item.query)\n",
+    "    print(f\"\\n\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c14a3cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planning searches...\n",
+      "The query most popular AI chatbots for IT networking 2025 is validated\n",
+      "The query AI chatbots for IT networking features 2025 is validated\n",
+      "The query customer reviews AI chatbots IT networking 2025 is validated\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "WebSearchItemList(searches=[WebSearchItem(reason='To find current trends and popular AI chatbots in IT networking.', query='most popular AI chatbots for IT networking 2025'), WebSearchItem(reason='To gather insights on advancements and features of IT networking chatbots.', query='AI chatbots for IT networking features 2025'), WebSearchItem(reason='To explore user reviews and industry adoption of chatbots in IT networking.', query='customer reviews AI chatbots IT networking 2025')])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "async def plan_deep_search(query) -> WebSearchItemList:\n",
+    "    webSearchItemListObject = await perform_plan(query)\n",
+    "    webSearchItemListObject = await validate_websearch_list(query, webSearchItemListObject)\n",
+    "    return webSearchItemListObject\n",
+    "\n",
+    "\n",
+    "await plan_deep_search(\"What are the most used AI powered Chatbots for IT Networking in 2025\")"
+   ]
   }
  ],
  "metadata": {
