--- a/2_openai/1_lab1.ipynb
+++ b/2_openai/1_lab1.ipynb
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The imports\n",
     "\n",
-    "from dotenv import load_dotenv\n",
+    "from dotenv import load_dotenv  # pyright: ignore[reportMissingImports]\n",
     "from agents import Agent, Runner, trace\n",
     "\n"
    ]
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
